# agent-gate

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  data.json  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
agent_gate/: gate.py  ledger.py  server.py
assets/: banner.html
examples/: demo.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_89edcc37506ab2bd_gate_py.html  z_89edcc37506ab2bd_ledger_py.html  z_89edcc37506ab2bd_server_py.html
tests/: test_gate.py  test_ledger.py  test_server.py
