[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-gate"
version = "0.1.1"
description = "An MCP server that lets an AI agent gate its own work: deterministic checks, refute-first review, and tamper-evident honest receipts. Fleet Mode, as a tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeff Otterson" }]
keywords = ["mcp", "model-context-protocol", "ai-agents", "evals", "guardrails", "llm"]
dependencies = ["mcp>=1.2"]

[project.scripts]
agent-gate = "agent_gate.server:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["agent_gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
